--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@eshengsky/vue-card-swipe": "^1.0.2",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-material": "^1.0.0-beta-12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
